Minor optimization